# macrometric

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  QUICK_START_USDA_TESTING.md  README.md  USDA_API_TESTING_SUMMARY.md  article-spec-driven-development.md  docker-compose.e2e.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20251206_000001_initial_user_table.py  20251206_000002_add_food_diary_tables.py  20251206_000003_add_daily_goals_table.py  20251206_000004_add_custom_foods_table.py  20251207_004517_501d978e3a63_add_created_by_user_id_to_food_items.py  20251207_005358_bae8bfc6d5dd_add_custom_meal_and_custom_meal_item_.py  20251207_005943_5814e373463e_add_timestamps_to_custom_meals.py  20251217_000001_add_user_name_username_fields.py
backend/scripts/: reset_db.py  seed_db.py  test_usda_connection.py
backend/src/: __init__.py
backend/src/api/: __init__.py  auth.py  categories.py  custom_foods.py  diary.py  foods.py  goals.py  meals.py  users.py
backend/src/core/: __init__.py  config.py  database.py  deps.py  middleware.py  security.py
backend/src/models/: __init__.py  base.py  custom_food.py  custom_meal.py  daily_goal.py  diary.py  food.py  meal_category.py  user.py
backend/src/services/: auth.py  category.py  custom_foods.py  custom_meal.py  diary.py  food_search.py  goals.py  nutrition_api.py
backend/tests/: conftest.py
backend/tests/contract/: test_account_deletion.py  test_add_meal.py  test_auth.py  test_categories.py  (+6 more)
(+145 files in other folders)
